# LUND-Robot-control-ROS

./: CMakeLists.txt  README.md  hrp_teleop.py  package.xml~  simple_driver.py
Crazyflie scripts/: basic_log.py  drone_position.py  get_drone_position.py
Resources/: .~lock.How-to-use-Crazyflie-and-Lighthouse-Positioning.odt#  How to start the Husqvarna Lawn Mower.odt  How-to-start-the-Husqvarna-Lawn-Mower.odt  How-to-use-Crazyflie-and-Lighthouse-Positioning.odt  ROS_notes_from_filipkro.odt  ~$w-to-start-the-Husqvarna-Lawn-Mower.odt
cache/: A364C365.json
crazyflie_scripts/: drone_flight.py  drone_lawnmower_flight.py  get_cf_position.txt  log_conf.py  read_mem.py  swarmSequenceCircle.py  swarm_flight.py  write_mem.py
crazyflie_scripts/cache/: 3225B189.json
ut_driver/: CMakeLists.txt  package.xml
ut_driver/scripts/: keyboard_control.py
