<?xml version="1.0"?>
<package format="2">
  <name>ut_driver</name>
  <version>0.0.0</version>
  <description>The lund_lawnmower_control package</description>
  <maintainer email="ilees3628@gmail.com">robot9</maintainer>
  <maintainer email="lihaoxin17@gmail.com">demo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>


</package>
